welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:3: error: Int does not take parameters
	else {if ((a+b==10*b(b+c)) || (a+b==10*(a+c))) return 5
                            ^